--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: required 
 services:
   - docker
+addons:
+  -chrome: stable
 
 before_install:
   - docker build -t mghoniem/docker-angular -f Dockerfile.dev .
